src/test/deca/context/invalid/created/testPass3/doubleDeclVar.deca
// Description : double delcaration d'une variable au sein d'une methode
//   
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11: DoubleVariableDeclarationException: The variable couldn't be declared because it has already been defined.

class A {
    int x;
    void getX(){
        int y = 1;
        float y = 1.0;
    }
}